# logic_extraction

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
domain/: rules.py
examples/: resume_contradictory.txt  resume_good.txt
extraction_output/: README.md  accumulated_results.json  extract_pipeline.py  merge_results.py  prompt_template.txt
grammar/: logic.lark
llm/: analyzer.py  extractor.py  prompts.py
parser/: ast_nodes.py  logic_parser.py
prover/: z3_checker.py
tests/: conftest.py  test_domain_rules.py  test_llm_modules.py  test_parser.py  test_web_app.py  test_z3_checker.py
web/: app.py  index.html
